# FlaskPortfolio

./: .gitignore  CoverageTest.sh  RunLocal.sh  pyproject.toml
JustinWCainPortfolio/: __init__.py  auth.py  db.py  index.py  portfolio.py  schema.sql
JustinWCainPortfolio/static/: style.css
JustinWCainPortfolio/templates/: base.html
JustinWCainPortfolio/templates/auth/: changepassword.html
JustinWCainPortfolio/templates/portfolio/: index.html  projects.html  recipes.html
JustinWCainPortfolio/templates/portfolio/project/: create.html  update.html
JustinWCainPortfolio/templates/portfolio/recipe/: show.html  update.html
JustinWCainPortfolio/templates/text/: blurb.txt  tommyquote.txt
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_portfolio.py
